--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,15 @@
 name = "barcoders"
 version = "0.3.0"
 authors = ["Andrew Buntine <info@bunts.io>"]
+description = "A barcode-encoding library"
+homepage = "https://github.com/buntine/barcoders"
+repository = "https://github.com/buntine/barcoders"
+readme = "README.md"
+keywords = ["barcode", "barcodes", "barcode-encoding"]
+license = "MIT"
+exclude = [
+    "media/*",
+]
 
 [features]
 
