Enabled more badges, turned on ascii feature in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ rust:
 matrix:
   allow_failures:
   - rust: nightly
+  env: FEATURES="--features ascii"
 before_script:
 - |
   pip install 'travis-cargo<0.2' --user &&
