Rejigging travis trying to get feature tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 sudo: false
 language: rust
 rust:
-- nightly
-- beta
-- stable
+  - nightly
 matrix:
-  allow_failures:
-  - rust: nightly
-  env: FEATURES="--features ascii"
+  include:
+    - rust: nightly
+      env: FEATURES="--features ascii"
 before_script:
 - |
   pip install 'travis-cargo<0.2' --user &&
