--- a/.travis.yml
+++ b/.travis.yml
@@ -2,20 +2,12 @@ sudo: false
 language: rust
 rust:
   - nightly
-matrix:
-  include:
-    - rust: nightly
-      env: FEATURES="--features ascii"
-before_script:
-- |
-  pip install 'travis-cargo<0.2' --user &&
-  export PATH=$HOME/.local/bin:$PATH
+  - beta
+  - stable
 script:
-- |
-  travis-cargo build &&
-  travis-cargo test &&
-  travis-cargo bench &&
-  travis-cargo --only stable doc
+  - cargo build --features=ascii &&
+  - cargo test --features=ascii
+  - cargo doc --features="ascii image"
 # addons:
 #   apt:
 #     packages:
