--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,27 @@
 sudo: false
 language: rust
+addons:
+  apt:
+    packages:
+      - libcurl4-openssl-dev
+      - libelf-dev
+      - libdw-dev
+      - binutils-dev # optional: only required for the --verify flag of coveralls
 rust:
   - nightly
   - beta
   - stable
+before_script:
+  - |
+      pip install 'travis-cargo<0.2' --user &&
+      export PATH=$HOME/.local/bin:$PATH
 script:
   - cargo build --features=ascii
   - cargo test --features=ascii
   - cargo doc --features="ascii image"
-# addons:
-#   apt:
-#     packages:
-#     - libcurl4-openssl-dev
-#     - libelf-dev
-#     - libdw-dev
-#after_success:
-#- travis-cargo --only stable doc-upload
-#- env COVERAGE_TESTING=1 travis-cargo coveralls --no-sudo
+after_success:
+  - env COVERAGE_TESTING=1 travis-cargo coveralls --no-sudo
+#  - travis-cargo --only stable doc-upload
 notifications:
   email:
     on_success: never
