--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_script:
 script:
   - cargo build --features=ascii
   - cargo test --features=ascii
-  - cargo doc --features="ascii image"
+#  - cargo doc --features="ascii image"
 after_success:
   - env COVERAGE_TESTING=1 travis-cargo coveralls --no-sudo
 #  - travis-cargo --only stable doc-upload
