--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,10 @@ before_script:
 script:
   - cargo build --features=ascii
   - cargo test --features=ascii
-#  - cargo doc --features="ascii image"
+  - cargo doc --features="ascii image"
 after_success:
   - env COVERAGE_TESTING=1 travis-cargo coveralls --no-sudo
-#  - travis-cargo --only stable doc-upload
+  - travis-cargo --only stable doc-upload
 notifications:
   email:
     on_success: never
