--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Andrew Buntine <info@bunts.io>"]
 description = "A barcode-encoding library"
 homepage = "https://github.com/buntine/barcoders"
 repository = "https://github.com/buntine/barcoders"
+documentation = "http://buntine.github.io/barcoders/barcoders/index.html"
 readme = "README.md"
 keywords = ["barcode", "barcodes", "barcode-encoding"]
 license = "MIT"
