--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
     - libdw-dev
     - binutils-dev
 rust:
-    #- nightly # Nightly was braking my build.
+- nightly
 - beta
 - stable
 before_script:
