--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ before_script:
   pip install 'travis-cargo<0.2' --user &&
   export PATH=$HOME/.local/bin:$PATH
 script:
-- cargo build --features=ascii
-- cargo test --features="ascii svg"
-- cargo doc --features="ascii image svg"
+- cargo build --features="ascii json"
+- cargo test --features="ascii json svg"
+- cargo doc --features="ascii json image svg"
 after_success:
 - env COVERAGE_TESTING=1 travis-cargo coveralls --no-sudo
 - travis-cargo --only stable doc-upload
