--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "barcoders"
 version = "1.0.3"
+edition = "2021"
 authors = ["Andrew Buntine <info@bunts.io>"]
 description = "A barcode-encoding library"
 homepage = "https://github.com/buntine/barcoders"
@@ -18,11 +19,9 @@ exclude = [
 ascii = []
 json = []
 svg = []
-dev = ["clippy"]
 
 [dependencies]
 image = {version = "0.24", optional = true}
-clippy = {version = "0.0.302", optional = true}
 
 # Manually update exr as image uses an older ver
 exr="1.6.3"
