--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ exclude = [
 ]
 
 [features]
-default = ["ascii", "json", "svg", "std"]
+default = ["ascii", "std"]
 ascii = []
 json = []
 svg = []
